--- a/HardwareStoreDemo/HardwareStore/Views/Supplier/Create.cshtml
+++ b/HardwareStoreDemo/HardwareStore/Views/Supplier/Create.cshtml
@@ -6,7 +6,7 @@
 }
 
 <section class="bg-white py-3 px-4 container rounded-2" style="max-width:800px;">
-    <h4 class="pt-2">Ingrese los datos del Cliente</h4>
+    <h4 class="pt-2">Ingrese los datos del Proveedor</h4>
     <hr />
     <div class="row px-md-3">
         <div class="col-md-12">
