Adding hardware store logo

--- a/HardwareStoreDemo/HardwareStore/Views/Shared/Admin/Partials/_SideBar.cshtml
+++ b/HardwareStoreDemo/HardwareStore/Views/Shared/Admin/Partials/_SideBar.cshtml
@@ -1,13 +1,13 @@
 ﻿<aside class="sidebar-nav-wrapper">
     <div class="navbar-logo">
         <a href="index.html">
-            <img src="~/images/logo/logo.svg" alt="logo" />
+            <img src="~/images/logo/HardwareStoreLogo.png" alt="logo" width="190px" height="200px"/>
         </a>
     </div>
     <nav class="sidebar-nav">
         <ul>
             <li class="nav-item">
-                <span class="text px-4">Ferreteria</span>
+                <span class="text px-4"><strong>Ferreteria "El Maestro"</strong></span>
             </li>
             <li class="nav-item nav-item-has-children">
                 <a href="#0"
