--- a/HardwareStoreDemo/HardwareStore/Views/Product/Index.cshtml
+++ b/HardwareStoreDemo/HardwareStore/Views/Product/Index.cshtml
@@ -37,9 +37,9 @@
                     @Html.DisplayNameFor(model => model.UnitPrice)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.UnitsInStock)
+                    Stock
                 </th>
-                <th>Acciones</th>
+                <th style="width:10%;">Acciones</th>
             </tr>
         </thead>
         <tbody>
