--- a/HardwareStoreDemo/HardwareStore/Views/Sale/Details.cshtml
+++ b/HardwareStoreDemo/HardwareStore/Views/Sale/Details.cshtml
@@ -7,18 +7,24 @@
 }
 <style>
     #sectionSaleDetail {
-        max-width: 700px;
+        max-width: 800px;
     }
     .btn {
         display: flex;
         justify-content: end;
+    }
+    #sectionSaleDetail img {
+        height: 120px;
     }
 </style>
 
 <div>
     <hr />
     <section id="sectionSaleDetail" class="container bg-light rounded-2 p-3">
-        <h3 class="text-center">Ferreteria -</h3>
+        <h3 class="text-center">Ferreteria "El Maestro"</h3>
+        <div class="w-100">
+            <img class="d-block mx-auto" src="/images/logo/HardwareStoreLogo.png" />
+        </div>
         <dl class="row max-w">
             <dt class="col-sm-4">
                 Numero de Factura :
