--- a/HardwareStoreDemo/HardwareStore/Views/Shared/Admin/Partials/_Footer.cshtml
+++ b/HardwareStoreDemo/HardwareStore/Views/Shared/Admin/Partials/_Footer.cshtml
@@ -4,10 +4,7 @@
             <div class="col-md-6 order-last order-md-first">
                 <div class="copyright text-center text-md-start">
                     <p class="text-sm">
-                        Designed and Developed by
-                        <a href="https://plainadmin.com" rel="nofollow" target="_blank">
-                            PlainAdmin
-                        </a>
+                        Designed and Developed by Ferreteria "El Maestro"
                     </p>
                 </div>
             </div>
