--- a/HardwareStoreDemo/HardwareStore/Views/Shared/Admin/Partials/_SideBar.cshtml
+++ b/HardwareStoreDemo/HardwareStore/Views/Shared/Admin/Partials/_SideBar.cshtml
@@ -1,7 +1,7 @@
 ﻿<aside class="sidebar-nav-wrapper">
     <div class="navbar-logo">
-        <a href="index.html">
-            <img src="~/images/logo/HardwareStoreLogo.png" alt="logo" width="190px" height="200px"/>
+        <a asp-action="Index" asp-controller="Home">
+            <img src="~/images/logo/HardwareStoreLogo.png" alt="logo" width="190px" height="140px"/>
         </a>
     </div>
     <nav class="sidebar-nav">
