--- a/HardwareStoreDemo/HardwareStore/Views/Shared/Admin/AdminLayout.cshtml
+++ b/HardwareStoreDemo/HardwareStore/Views/Shared/Admin/AdminLayout.cshtml
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="assets/images/favicon.svg" type="image/x-icon" />
-    <title>@ViewData["Title"] - Ferreteria</title>
+    <title>@ViewData["Title"] - Ferreteria "El Maestro"</title>
 
     <!-- ========== All CSS files linkup ========= -->
     <link rel="stylesheet" href="~/css/bootstrap.min.css" />
