--- a/HardwareStoreDemo/HardwareStore/Views/Sale/Index.cshtml
+++ b/HardwareStoreDemo/HardwareStore/Views/Sale/Index.cshtml
@@ -56,6 +56,9 @@
             }
         </tbody>
     </table>
+    <div class="form-group">
+        <a class="btn btn-primary" asp-action="Index" asp-controller="Home">Reporte de Ventas <i class="lni lni-arrow-left"></i></a>
+    </div>
 </section>
 
 @section Scripts {
