--- a/HardwareStoreDemo/HardwareStore/Views/Shared/Admin/Partials/_SideBar.cshtml
+++ b/HardwareStoreDemo/HardwareStore/Views/Shared/Admin/Partials/_SideBar.cshtml
@@ -27,9 +27,15 @@
                 </a>
                 <ul id="ddmenu_2" class="collapse show dropdown-nav">
                     <li>
-                        <a asp-controller="Administrator"
+                        <a asp-controller="Login"
                            asp-action="Index">
                             <i class="lni lni-notepad text-bold"></i> Administrador
+                        </a>
+                    </li>
+                    <li>
+                        <a asp-controller="Rol"
+                           asp-action="Index">
+                            <i class="lni lni-notepad text-bold"></i> Roles
                         </a>
                     </li>
                     <li>
